feat: manage and delete datasets safely
